Fixed: temporary fix to z-index

--- a/Client/web-ui/src/App.scss
+++ b/Client/web-ui/src/App.scss
@@ -29,19 +29,25 @@
 }
 
 .Map {
+  position: fixed;
   grid-area: 1 / 1 / 3 / end;
-  z-index: 1;
+  height: 100%;
+  width: 100%;
 }
 
 .Main {
   grid-area: main;
+  height: 100%;
+  width: 100%;
+  z-index: auto;
+
 }
 
 .Footer {
   height: 100%;
   width: 100%;
   grid-area: footer;
-  z-index: 2;
+  z-index: 4;
 }
 
 @media (max-width: 600px) {
